# tarakta

./: .env.example  .gitignore  CLAUDE.md  CUSTOM_BOT.md  Dockerfile  MAIN_BOT.md  PLAN.md  STRATEGY.md  backtest.py  backtest_flipped.py  backtest_ttc.py  docker-compose.yml  fix_elsa_trade.py  fly.stream-bot.toml  fly.toml  pyproject.toml  requirements.txt  tarakta-update.txt  trace_examples.py  trace_trade.py  train_model.py  verify_pullback.py
.claude/: launch.json  settings.json
backtest_results/: flipped_20260305_045040.json  original_20260305_044601.json
docs/: CHANGELOG.md  COURSE_AUDIT_2026-04-19.md  MM_COURSE_FAITHFUL_REDESIGN.md  MM_COURSE_GAP_ANALYSIS.md  MM_COURSE_VS_CODE_AUDIT.md  MM_ENGINE_FILTER_PIPELINE.md  MM_ENGINE_INTEGRATION_GUIDE.md  MM_SANITY_AGENT_DESIGN.md  ROADMAP.md  STATUS_2026-04-20.md  STATUS_2026-04-21.md  STATUS_2026-04-22.md  STATUS_2026-04-23.md  mm-method-strategy-spec.md  review-widget-implementation-guide.md
migrations/: 001_initial_schema.sql  003_add_leverage_columns.sql  005_reversals.sql  006_add_llm_enabled.sql  007_add_test_group.sql  008_add_flipped_trader.sql  009_add_agent3_reasoning.sql  010_rag_knowledge_base.sql  012_instance_isolation.sql  013_advisor_insights.sql  014_api_usage.sql  015_mm_method_columns.sql  016_review_requests.sql  017_mm_lifecycle_columns.sql  018_mm_htf_trend_columns.sql  019_mm_sanity_agent.sql  020_mm_scratch_mfe.sql
scripts/: agent_review.py  compounded_backtest.py  evaluate_trades.py  extract_tbd_course.py  replay_scan.py  replay_scan_dead_zeroed.py  replay_scan_gates_3of5.py  trade_audit.py  (+7 more)
(+290 files in other folders)
