[project]
name = "tarakta"
version = "0.1.0"
description = "Automated crypto trading bot using Smart Money Concepts"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b1",
    "smartmoneyconcepts>=0.0.20",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "supabase>=2.0.0",
    "pydantic-settings>=2.0.0",
    "bcrypt>=4.0.0",
    "aiohttp>=3.9.0",
    "structlog>=24.0.0",
    "itsdangerous>=2.1.0",
    "httpx>=0.27.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]
backtest = [
    "matplotlib>=3.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
